fix for visuals on iphone view

--- a/Projects/proj6/style/style.css
+++ b/Projects/proj6/style/style.css
@@ -270,6 +270,7 @@ svg {
     h1 {
         font: normal normal 900 40px/59px Heebo;
         letter-spacing: 0px;
+        margin-top: 10px;
     }
 
     p {
@@ -306,7 +307,8 @@ svg {
 
     input[type="button"] {
         max-width: unset;
-        align-self: center
+        align-self: center;
+            margin-bottom: 100px;
     }
 
     .bottom-box {
